# signalfoundry

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  activate.ps1  build-all.bat  build.py  fetch_majors.ps1  market-data-integration.bat  pyproject.toml
core/: pyproject.toml
core/src/okmich_quant_core/: __init__.py  base_strategy.py  broker_session.py  config.py  env_loader.py  filter.py  health.py  multi_trader.py  position_manager.py  price_buffer.py  run_loop.py  signal.py  trader.py
core/tests/: conftest.py  test_base_strategy_seam.py  test_config.py  test_conformance.py  test_dispatch_inference.py  test_filter.py  test_health.py  test_logging.py  test_logging_events.py  test_multi_trader.py  test_notifier.py  test_price_buffer.py  test_run_loop.py  test_text_log.py  test_trader.py
features/: pyproject.toml
features/src/okmich_quant_features/: __init__.py  candle.py  filters.py  fractional_diff.py  ma.py  renko.py  sample_price_features.py  stats_optimal_search.py  temporal.py
features/tests/: test_feature_integrity.py  test_fractional_diff.py  test_renko.py  test_stats_optimal_search.py  test_temporal.py  test_tick_volume_how_zscore.py
features/tests/cross_market/: test_correlation.py  test_cross_features_computer.py  test_deviation.py  test_purify.py  test_trend_diff.py
features/tests/directional_change/: test_cgp_features.py  test_features.py  test_idc.py  test_parser.py  test_tsfdc_features.py
features/tests/microstructure/: __init__.py  test_composites.py  test_composites_advanced.py  test_depth.py  test_depth_advanced.py  test_information.py  test_liquidity.py  test_liquidity_advanced.py  test_order_flow.py  test_order_flow_advanced.py  test_price_structure.py  test_price_structure_advanced.py  test_primitives.py  test_regime.py
features/tests/momentum/: test_david_varadi.py  test_williamblau.py
features/tests/multi_market/: test_janus.py  test_multi_features_computer.py  test_portfolio_stats.py  test_risk.py
features/tests/path_structure/: test_auto_corr.py  test_path_structure_features.py
features/tests/timothymasters/: conftest.py  test_feature_computer.py  test_fti.py  test_information.py  test_momentum.py  test_trend.py  test_variance.py  test_volume.py
features/tests/trend/: test_continous_ma_trend.py  test_continuous_trend.py  test_continuous_trend_3class.py  test_ctl_streaming_equivalence.py  test_trend_persistence.py  test_trend_persistence_golden.py  test_z_score_trend.py
features/tests/utils/: test_lag_features.py  test_rolling_transforms.py  test_transform.py  test_transform_pipeline.py
features/tests/volatility/: test_quantile_based_volatility.py  test_volatility.py  test_vov_vts.py
ib/: pyproject.toml
ib/src/okmich_quant_ib/: __init__.py  bar_aggregator.py  broker_session.py  contract.py  event_loop.py  position_cache.py  resilience.py  strategy.py  timeframe_utils.py
ib/tests/: conftest.py  test_bar_aggregator.py  test_contract.py  test_functions_ib.py  test_ib_data_fetcher.py  test_inference_logging.py  test_position_cache.py  test_resilience.py  test_strategy_execution.py  test_timeframe_utils.py
ib/tests/integration/: conftest.py  test_connection.py  test_historical_fetch.py  test_order_roundtrip.py
labelling/: CHANGELOG.md  pyproject.toml
labelling/tests/prediction/: test_forward_return_labeler.py  test_tbm.py
labelling/tests/regime/: test_causal_regime_labeler.py  test_threshold_optimizer.py
labelling/tests/tbm/: conftest.py  test_cv.py  test_events.py  test_labeling.py  test_meta_labeling.py  test_volatility.py
labelling/tests/utils/: test_label_eval_util.py  test_label_util.py  test_metrics_evaluator.py  test_posterior_eval_util.py  test_posterior_plot_utils.py  test_predictive_evaluator.py
ml/: pyproject.toml
ml/src/okmich_quant_ml/: __init__.py  generic_model_signal.py  inference_model_wrappers.py  prophet.py
ml/tests/: conftest.py  test_inference_model_wrappers.py
ml/tests/bocpd/: test_detector.py  test_observation_models.py  test_performance.py  test_reference_reproducibility.py
ml/tests/clustering/: test_swkmeans.py
ml/tests/hmm/: test_factorial_hmm.py  test_fixed_lag_smoothing.py  test_inference_cache.py  test_inference_modes.py  test_markov_switching_ar.py  test_nrestarts_refit_regression.py  test_per_bar_loglik.py  test_pomegranate_hmm.py  test_pomegranate_mixture_hmm.py
ml/tests/markov_switching/: test_ms_garch.py  test_ms_ou.py  test_ms_var.py  test_online_learning.py  test_sliding_window.py
ml/tests/meta_model/: test_meta_model.py
ml/tests/posterior_inference/: test_adaptive_lag.py  test_asymmetry.py  test_diagnostics.py  test_inferers.py  test_migrated_filters.py  test_monitoring.py  test_monitoring_io.py  test_posterior_inference.py  test_transformers.py
ml/tests/regime_filters/: test_postprocessor.py
ml/tests/tbm/: test_barriers.py  test_position_monitor.py  test_vol_estimator.py
mt5/: pyproject.toml
mt5/src/okmich_quant_mt5/: __init__.py  broker_session.py  resilience.py  strategy.py  timeframe_utils.py
mt5/tests/: conftest.py  test_broker_session.py  test_filter_integration.py  test_filters.py  test_resilience.py
mt5/tests/position_manager/: __init__.py  conftest.py  test_atr_based_managers.py  test_base_functionality.py  test_config_validation.py  test_integration.py  test_max_loss_stop_loss_manager.py  test_one_cycle_correctness.py  test_percent_based_managers.py  test_point_based_managers.py  test_position_manager_factory.py
neural-net/: pyproject.toml
neural-net/src/okmich_quant_neural_net/: tab_2_seq.py
neural-net/tests/: test_tab_2_seq.py
neural-net/tests/keras/: __init__.py  test_callbacks.py  test_hierarchical_multiscale_cnn.py  test_metrics.py  test_wavenet_causal_cnn.py
pipeline/: pyproject.toml
pipeline/src/okmich_quant_pipeline/: _io.py  http.py
pipeline/tests/directional_change/: test_atdc.py  test_bayesian_opt.py  test_cgpts.py  test_ita_algo1.py  test_ita_pipeline.py  test_ita_sim.py  test_mtdc.py  test_tsfdc.py
research/: pyproject.toml
research/tests/: test_k_ratio.py
utils/: pyproject.toml
(+563 files in other folders)
