[project]
name = "signalfoundry-workspace"
version = "0.1.0"
description = "SignalFoundry quantitative research and trading workspace"
requires-python = ">=3.12,<3.14"
dependencies = [
    "okmich-quant-core",
]

[tool.uv.workspace]
members = [
    "core",
    "features",
    "labelling",
    "ml",
    "mt5",
    "neural-net",
    "pipeline",
    "research",
    "utils",
]
exclude = ["__pycache__"]

[tool.uv.sources]
okmich-quant-core = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
