[project]
name = "okmich-quant-core"
version = "0.6.0"
description = "Core foundation library for okmich-quant framework"
requires-python = ">=3.12"
dependencies = [
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "python-dateutil>=2.8.0",
    "python-dotenv==1.1.1",
    "requests>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
