[project]
name = "okmich-quant-features"
version = "2.4.0"
description = "Feature engineering and technical indicators"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.0.0",
    "PyWavelets==1.9.0",
    "scikit-learn>=1.3.0",
    "scikit-optimize>=0.10.0",
    "ta-lib>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
