[project]
name = "okmich-quant-features"
version = "0.4.0"
description = "Feature engineering and technical indicators"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.6",
    "numba>=0.60.0",
    "numpy>=2.3.5",
    "pandas>=2.0.0",
    "PyWavelets==1.9.0",
    "scikit-learn>=1.3.0",
    "scikit-optimize>=0.10.0",
    "statsmodels==0.14.5",
    "ta-lib>=0.6.0",
    "tqdm==4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
