[project]
name = "okmich-quant-labelling"
version = "1.3.0"
description = "Target variable creation and labeling strategies"
requires-python = ">=3.12"
dependencies = [
    "okmich-quant-features",

    "matplotlib>=3.6",
    "numba==0.63.1",
    "pandas==2.3.0",
    "plotly>=6.5.2",
    "ruptures==1.1.10",
    "tstrends==0.3.0",
    "xgboost==3.0.4",
]

[tool.uv.sources]
okmich-quant-features = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
