[project]
name = "okmich-quant-mt5"
version = "0.5.0"
description = "MetaTrader 5 integration and data fetching"
requires-python = ">=3.12"
dependencies = [
    "okmich-quant-core",
    "okmich-quant-utils",
    "MetaTrader5>=5.0.0",
    "pandas==2.3.0",
]

[project.scripts]
fetch-mt5-data = "okmich_quant_mt5.utils.script.market_data_downloader:main"

[tool.uv.sources]
okmich-quant-core = { workspace = true }
okmich-quant-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
