[project]
name = "okmich-quant-neural-net"
version = "1.2.0"
description = "Deep learning models for price prediction"
requires-python = ">=3.12"
dependencies = [
    "okmich-quant-utils",
    "okmich-quant-features",
    "okmich-quant-labelling",
    "imageio==2.37.0",
    "ml_dtypes==0.5.3",
    "tensorflow==2.20.0",
    "keras==3.11.1",
    "keras-tuner>=1.4.0",
    "h5py==3.14.0",
    "matplotlib>=3.6",
    "numba==0.63.1",
    "pandas==2.3.0",
    "scikit-learn==1.7.2",
]

[tool.uv.sources]
okmich-quant-utils = { workspace = true }
okmich-quant-features = { workspace = true }
okmich-quant-labelling = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okmich_quant_neural_net"]
