[project]
name = "okmich-quant-pipeline"
version = "0.1.0"
description = "Data pipeline: raw OHLCV parquet → feature-enriched + labeled datasets"
requires-python = ">=3.12"
dependencies = [
    "okmich-quant-features",
    "okmich-quant-utils",
    "numpy>=2.3.5",
    "pandas>=2.0.0",
    "pyarrow>=20.0.0",
]

[project.scripts]
build-feature-dataset = "okmich_quant_pipeline.features.build_broker:main"

[tool.uv.sources]
okmich-quant-features = { workspace = true }
okmich-quant-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"