[project]
name = "okmich-quant-pipeline"
version = "0.1.0"
description = "Data pipeline: raw OHLCV parquet → feature-enriched + labeled datasets"
requires-python = ">=3.12"
dependencies = [
    "okmich-quant-core",
    "okmich-quant-features",
    "okmich-quant-ml",
    "okmich-quant-utils",
    "joblib>=1.3",
    "numpy>=2.3.5",
    "pandas>=2.0.0",
    "pyarrow>=20.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
build-feature-dataset = "okmich_quant_pipeline.features.build_broker:main"
monitor-streaming-gates = "okmich_quant_pipeline.monitoring.run_monitor:main"
fetch-macro-data = "okmich_quant_pipeline.macro.update:main"
build-macro-features = "okmich_quant_pipeline.macro.store:main"
fetch-news-calendar = "okmich_quant_pipeline.news_calendar.build:main"

[tool.uv.sources]
okmich-quant-core = { workspace = true }
okmich-quant-features = { workspace = true }
okmich-quant-ml = { workspace = true }
okmich-quant-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"