[project]
name = "okmich-quant-utils"
version = "0.6.0"
description = "Common utilities and helper functions"
requires-python = ">=3.12"
dependencies = [
    "imageio==2.37.0",
    "ml_dtypes==0.5.3",
    "h5py==3.14.0",

    "openpyxl==3.1.5",
    "pandas==2.3.0",
    "pyarrow==20.0.0",
    "tables==3.10.2",
    "python-dotenv==1.1.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
